5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1684_1105.log
== TEST (2019-04-27 11:11:36) 
-- CODE:
brasao = input("Digite a descricao: ")
print("Entrada ", casa)
if (brasao == "lobo" ):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Entrada ", casa)
NameError: name 'casa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:12:14) 
-- CODE:
brasao = input("Digite a descricao: ")

print("Entrada: ", brasao)

if (brasao == "lobo" ):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 11:12:46) 
-- CODE:
brasao = input("Digite a descricao: ")

print("Entrada: ", brasao)

if (brasao == "lobo" ):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")

-- EXECUTION TIME:
0.161141
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:14:26) 
-- CODE:
brasao = input("Digite a descricao: ")

print("Entrada: ", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:14:37) 
-- CODE:
brasao = input("Digite a descricao: ")

print("Entrada: ", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")

-- EXECUTION TIME:
0.163159
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:14:59) 
-- CODE:
brasao = input("Digite a descricao: ")

print("Entrada: ", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:15:10) 
-- CODE:
brasao = input("Digite a descricao: ")

print("Entrada: ", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.246237
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
